[package]
name = "mdls"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@tsoutsman.com>"]
edition = "2021"
description = "A language server for Markdown"
repository = "https://github.com/tsoutsman/mdls"
license = "MIT or Apache-2.0"

[dependencies]
crossbeam-channel = "0.5.6"
dissimilar = "1.0.4"
hashbrown = "0.12.3"
lsp-server = { version = "0.0.123", package = "ra_ap_lsp-server" }
lsp-types = "0.93.0"
pulldown-cmark = "0.9.2"
serde_json = "1.0.83"
text-edit = { version = "0.0.123", package = "ra_ap_text_edit" }
textwrap = "0.15.0"

# logging
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"